--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2624,7 +2624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
         "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
@@ -2654,7 +2654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
@@ -2682,14 +2682,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
-        "id": "a78f1070-3ff3-436a-8391-153f019f53cd"
+        "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f6bf507-48c6-4672-e251-58efb7e30ea6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'abc', 'profession': 'student'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove a key from a dictionary."
+        "# Write a Python program to remove a key from a dictionary.\n",
+        "my_dict={'name':'abc','age':12,'profession':'student'}\n",
+        "del my_dict['age']\n",
+        "print(my_dict)"
       ]
     },
     {
@@ -2701,7 +2716,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to get the number of keys in a dictionary."
+        "-# Write a Python program to get the number of keys in a dictionary.\n"
       ]
     },
     {
