--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2709,14 +2709,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
-        "id": "fcba0267-8cc4-4e89-9e78-2d820916c177"
+        "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c77714ff-df79-4c50-c862-269b3288c341"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of keys: 3\n"
+          ]
+        }
+      ],
       "source": [
-        "-# Write a Python program to get the number of keys in a dictionary.\n"
+        "# Write a Python program to get the number of keys in a dictionary.\n",
+        "\n",
+        "\n",
+        "def count_keys(my_dict):\n",
+        "    return len(my_dict)\n",
+        "\n",
+        "my_dict = {\"name\": \"abc\", \"age\": 55, \"city\": \"nzb\"}\n",
+        "num_keys = count_keys(my_dict)\n",
+        "print(\"Number of keys:\", num_keys)\n",
+        "\n"
       ]
     },
     {
