--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2742,14 +2742,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
-        "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d"
+        "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5033649e-72e6-4ffc-b9f3-44dd9ea9052e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Largest value: 100\n",
+            "Smallest value: 10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the largest and smallest values in a dictionary."
+        "# Write a Python program to find the largest and smallest values in a dictionary.\n",
+        "\n",
+        "def find_largest_and_smallest(my_dict):\n",
+        "    # Check if the dictionary is empty\n",
+        "    if not my_dict:\n",
+        "        return None, None\n",
+        "\n",
+        "    # Find the largest and smallest values\n",
+        "    largest_value = max(my_dict.values())\n",
+        "    smallest_value = min(my_dict.values())\n",
+        "\n",
+        "    return largest_value, smallest_value\n",
+        "\n",
+        "# Example dictionary\n",
+        "my_dict = {\"a\": 50, \"b\": 20, \"c\": 100, \"d\": 10, \"e\": 75}\n",
+        "\n",
+        "# Call the function\n",
+        "largest, smallest = find_largest_and_smallest(my_dict)\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Largest value:\", largest)\n",
+        "print(\"Smallest value:\", smallest)\n"
       ]
     },
     {
