--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2682,7 +2682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
@@ -2709,7 +2709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
@@ -2742,7 +2742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
@@ -2805,7 +2805,15 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python function that returns the square of a number."
+        "# Write a Python function that returns the square of a number.\n",
+        "\n",
+        "def square(number):\n",
+        "    return number ** 2\n",
+        "\n",
+        "# Example usage\n",
+        "num = 5\n",
+        "result = square(num)\n",
+        "print(f\"The square of {num} is {result}\")\n"
       ]
     },
     {
