--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2798,12 +2798,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
       "metadata": {
-        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627"
+        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6c58b14-6310-4dd7-eeed-b0cf438cabb5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The square of 5 is 25\n"
+          ]
+        }
+      ],
       "source": [
         "# Write a Python function that returns the square of a number.\n",
         "\n",
@@ -2818,14 +2830,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
-        "id": "91d90a4a-7329-45db-893b-caed8450ba96"
+        "id": "91d90a4a-7329-45db-893b-caed8450ba96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fac69126-3903-45ed-815b-76e1395ebc0b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of 10 and 20 is 30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts two parameters and returns their sum."
+        "# Write a Python function that accepts two parameters and returns their sum.\n",
+        "def add_numbers(a, b):\n",
+        "    return a + b\n",
+        "\n",
+        "# Example usage\n",
+        "num1 = 10\n",
+        "num2 = 20\n",
+        "result = add_numbers(num1, num2)\n",
+        "print(f\"The sum of {num1} and {num2} is {result}\")\n",
+        "\n"
       ]
     },
     {
