--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2863,14 +2863,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
-        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3"
+        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9fd088de-dd2a-45d0-9d0e-cc8025e7aa31"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "29 is a prime number.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a given number is prime."
+        "# Write a Python function to check if a given number is prime.\n",
+        "\n",
+        "def is_prime(num):\n",
+        "    # Check if the number is less than 2 (1 and negative numbers are not prime)\n",
+        "    if num <= 1:\n",
+        "        return False\n",
+        "\n",
+        "    # Check for factors from 2 to the square root of the number\n",
+        "    for i in range(2, int(num ** 0.5) + 1):\n",
+        "        if num % i == 0:\n",
+        "            return False\n",
+        "\n",
+        "    # If no factors are found, the number is prime\n",
+        "    return True\n",
+        "\n",
+        "# Example usage\n",
+        "num = 29\n",
+        "if is_prime(num):\n",
+        "    print(f\"{num} is a prime number.\")\n",
+        "else:\n",
+        "    print(f\"{num} is not a prime number.\")\n",
+        "\n"
       ]
     },
     {
