--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2908,14 +2908,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "56337441-68c3-45df-8733-a34cde0533a5",
       "metadata": {
-        "id": "56337441-68c3-45df-8733-a34cde0533a5"
+        "id": "56337441-68c3-45df-8733-a34cde0533a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d6f2e59-c1f2-47c2-ad42-2693ae652399"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The factorial of 5 is 120\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the factorial of a number using recursion."
+        "# Write a Python function to calculate the factorial of a number using recursion.\n",
+        "\n",
+        "def factorial(n):\n",
+        "    # Base case: factorial of 0 or 1 is 1\n",
+        "    if n == 0 or n == 1:\n",
+        "        return 1\n",
+        "    # Recursive case: n * factorial of (n-1)\n",
+        "    else:\n",
+        "        return n * factorial(n - 1)\n",
+        "\n",
+        "# Example usage\n",
+        "num = 5\n",
+        "result = factorial(num)\n",
+        "print(f\"The factorial of {num} is {result}\")\n"
       ]
     },
     {
