--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2945,14 +2945,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
-        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a"
+        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a84dc097-c3d0-4083-f779-ba347ab439b9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 raised to the power of 4 is 81\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the power of a number using recursion."
+        "# Write a Python function to calculate the power of a number using recursion.\n",
+        "def power(base, exponent):\n",
+        "    # Base case: any number raised to the power of 0 is 1\n",
+        "    if exponent == 0:\n",
+        "        return 1\n",
+        "    # Recursive case: base * power(base, exponent-1)\n",
+        "    else:\n",
+        "        return base * power(base, exponent - 1)\n",
+        "\n",
+        "# Example usage\n",
+        "base = 3\n",
+        "exponent = 4\n",
+        "result = power(base, exponent)\n",
+        "print(f\"{base} raised to the power of {exponent} is {result}\")\n"
       ]
     },
     {
