--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2982,14 +2982,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "ec44911e-7820-46cc-96a3-4ca443888837",
       "metadata": {
-        "id": "ec44911e-7820-46cc-96a3-4ca443888837"
+        "id": "ec44911e-7820-46cc-96a3-4ca443888837",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ab74eea-a66c-4422-fc32-1fb4d48c42d8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The length of the list is 5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to accept a list and return its length without using the built-in len() function."
+        "# Write a Python function to accept a list and return its length without using the built-in len() function.\n",
+        "def list_length(lst):\n",
+        "    count = 0\n",
+        "    for item in lst:\n",
+        "        count += 1\n",
+        "    return count\n",
+        "\n",
+        "# Example usage\n",
+        "my_list = [10, 20, 30, 40, 50]\n",
+        "result = list_length(my_list)\n",
+        "print(f\"The length of the list is {result}\")\n"
       ]
     },
     {
