--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3016,14 +3016,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
       "metadata": {
-        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836"
+        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71fe5439-623e-40e6-d709-47c93aa58b8c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of positional arguments is: 15\n",
+            "The sum of positional arguments is: 60\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts both positional and keyword arguments and prints the sum of positional arguments."
+        "#  keywordWrite a Python function that accepts both positional and arguments and prints the sum of positional arguments.\n",
+        "def sum_positional_args(*args, **kwargs):\n",
+        "    # Sum the positional arguments (args)\n",
+        "    total = sum(args)\n",
+        "\n",
+        "    # Print the sum of positional arguments\n",
+        "    print(f\"The sum of positional arguments is: {total}\")\n",
+        "\n",
+        "# Example usage\n",
+        "sum_positional_args(1, 2, 3, 4, 5)  # Only positional arguments\n",
+        "sum_positional_args(10, 20, 30, a=100, b=200)  # Positional and keyword arguments\n"
       ]
     },
     {
