--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3051,14 +3051,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
       "metadata": {
-        "id": "f4ffc7a8-f579-461c-b507-4085a0477283"
+        "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe395fee-7030-4f4d-87b6-c787febad6b7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The maximum of the two numbers is 20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to find the maximum of two numbers using keyword arguments."
+        "# Write a Python function to find the maximum of two numbers using keyword arguments.\n",
+        "def max_of_two_numbers(*, num1, num2):\n",
+        "    # Compare the two numbers and return the maximum\n",
+        "    if num1 > num2:\n",
+        "        return num1\n",
+        "    else:\n",
+        "        return num2\n",
+        "\n",
+        "# Example usage\n",
+        "result = max_of_two_numbers(num1=10, num2=20)\n",
+        "print(f\"The maximum of the two numbers is {result}\")\n"
       ]
     },
     {
