--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3085,14 +3085,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
       "metadata": {
-        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f"
+        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75aa1f5c-8254-4f8e-c763-16f17bc2226a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The product of the numbers is 24\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts a list of numbers and returns their product."
+        "# Write a Python function that accepts a list of numbers and returns their product.\n",
+        "def product_of_numbers(numbers):\n",
+        "    # Initialize the product variable to 1\n",
+        "    product = 1\n",
+        "    for num in numbers:\n",
+        "        product *= num  # Multiply each number to the product\n",
+        "    return product\n",
+        "\n",
+        "# Example usage\n",
+        "numbers = [2, 3, 4]\n",
+        "result = product_of_numbers(numbers)\n",
+        "print(f\"The product of the numbers is {result}\")\n"
       ]
     },
     {
