--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3120,15 +3120,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
       "metadata": {
-        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9"
+        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eaef8ff2-c497-4ff1-8c12-de379ea26996"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number 7 is Odd.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a number is even or odd using the modulo operator."
+        "# Write a Python function to check if a number is even or odd using the modulo operator.\n",
+        "def check_even_odd(number):\n",
+        "    # Use modulo operator to check if the number is even or odd\n",
+        "    if number % 2 == 0:\n",
+        "        return \"Even\"\n",
+        "    else:\n",
+        "        return \"Odd\"\n",
+        "\n",
+        "# Example usage\n",
+        "num = 7\n",
+        "result = check_even_odd(num)\n",
+        "print(f\"The number {num} is {result}.\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "4uBvRqCQxuwx"
+      },
+      "id": "4uBvRqCQxuwx"
     },
     {
       "cell_type": "code",
