--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3163,14 +3163,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "afbf262e-daed-40a9-827f-82fa60979610",
       "metadata": {
-        "id": "afbf262e-daed-40a9-827f-82fa60979610"
+        "id": "afbf262e-daed-40a9-827f-82fa60979610",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87b23683-3ce1-4ed4-9710-d58e19dc2f57"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension."
+        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension.\n",
+        "\n",
+        "squares = [x**2 for x in range(1, 11)]\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(squares)\n"
       ]
     },
     {
@@ -3182,7 +3199,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to filter out all even numbers from a list using list comprehension."
+        "# Write a Python program to filter out all even numbers from a list using list comprehension.\n"
       ]
     },
     {
