--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3192,14 +3192,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
       "metadata": {
-        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c"
+        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37e0d09e-4cbb-4895-8726-3be45840b6de"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 5, 7, 9]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter out all even numbers from a list using list comprehension.\n"
+        "# Write a Python program to filter out all even numbers from a list using list comprehension.\n",
+        "# Original list of numbers\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Using list comprehension to filter out even numbers\n",
+        "odd_numbers = [num for num in numbers if num % 2 != 0]\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(odd_numbers)\n"
       ]
     },
     {
