--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3224,26 +3224,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
       "metadata": {
-        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271"
+        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fa8e467-c1d9-43ed-cbb2-ceac095e129c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'grape', 'cherry', 'peach']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension."
+        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension.\n",
+        "# Given list of words\n",
+        "words = [\"apple\", \"banana\", \"kiwi\", \"grape\", \"cherry\", \"fig\", \"peach\"]\n",
+        "\n",
+        "# Using list comprehension to filter words longer than 4 characters\n",
+        "long_words = [word for word in words if len(word) > 4]\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(long_words)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
       "metadata": {
-        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee"
+        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "12f3139f-9273-43dd-8247-026347d1e243"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['H', 'W', 'T', 'P', 'P']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension."
+        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension.\n",
+        "# Given string\n",
+        "input_string = \"Hello World! This is a Python Program.\"\n",
+        "\n",
+        "# Using list comprehension to filter uppercase letters\n",
+        "uppercase_letters = [char for char in input_string if char.isupper()]\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(uppercase_letters)\n"
       ]
     },
     {
