--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3288,26 +3288,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
       "metadata": {
-        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b"
+        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3d55718-eac4-4203-9628-7c69587cf14d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The first 10 Fibonacci numbers are: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension."
+        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n",
+        "def fibonacci(n):\n",
+        "    # Using list comprehension to generate the first n Fibonacci numbers\n",
+        "    fib = [0, 1] + [0] * (n - 2)  # Initializing the first two Fibonacci numbers\n",
+        "    [fib.__setitem__(i, fib[i-1] + fib[i-2]) for i in range(2, n)]  # Filling the list with Fibonacci numbers\n",
+        "    return fib[:n]  # Return only the first n numbers\n",
+        "\n",
+        "# Example usage\n",
+        "n = 10\n",
+        "result = fibonacci(n)\n",
+        "print(f\"The first {n} Fibonacci numbers are: {result}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
       "metadata": {
-        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9"
+        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ab8b957-ce24-4bda-b50b-99dc5e83125b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension."
+        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension.\n",
+        "# Define the range of numbers (1 to 10 in this example)\n",
+        "n = 10\n",
+        "\n",
+        "# Using dictionary comprehension to create the dictionary\n",
+        "squares_dict = {x: x**2 for x in range(1, n+1)}\n",
+        "\n",
+        "# Print the resulting dictionary\n",
+        "print(squares_dict)\n"
       ]
     },
     {
