--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3354,26 +3354,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
       "metadata": {
-        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb"
+        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5522ece6-02ea-4b18-dcda-9049794184b1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension."
+        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension.\n",
+        "# Lists of keys and values\n",
+        "keys = ['a', 'b', 'c', 'd']\n",
+        "values = [1, 2, 3, 4]\n",
+        "\n",
+        "# Using dictionary comprehension to create a dictionary\n",
+        "my_dict = {keys[i]: values[i] for i in range(len(keys))}\n",
+        "\n",
+        "# Print the resulting dictionary\n",
+        "print(my_dict)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
       "metadata": {
-        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b"
+        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "396a157b-d9b5-4265-dd47-66b3eeb478b4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension."
+        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension.\n",
+        "# Using dictionary comprehension to create the dictionary with cubes\n",
+        "cubes_dict = {x: x**3 for x in range(1, 6)}\n",
+        "\n",
+        "# Print the resulting dictionary\n",
+        "print(cubes_dict)\n"
       ]
     },
     {
