--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3416,38 +3416,101 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
       "metadata": {
-        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed"
+        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26037d2e-c19a-4a56-a186-cbc826e6a3f4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to square each element of a list using the map() function."
+        "# Write a Python program to square each element of a list using the map() function.\n",
+        "# Given list of numbers\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "# Using map() to square each element in the list\n",
+        "squared_numbers = list(map(lambda x: x**2, numbers))\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(squared_numbers)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
       "metadata": {
-        "id": "6d4d17f3-c40f-4944-8656-c6416b600361"
+        "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89e33b1f-00ef-4b1d-9635-a7080990e7c4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter all even numbers from a list using the filter() function."
+        "# Write a Python program to filter all even numbers from a list using the filter() function.\n",
+        "# Given list of numbers\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Using filter() to keep only even numbers\n",
+        "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
+        "\n",
+        "# Print the resulting list of even numbers\n",
+        "print(even_numbers)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
       "metadata": {
-        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75"
+        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e51b52c4-4f90-4dc4-fe13-c10d27443776"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[15, 30, 45]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5."
+        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5.\n",
+        "# Lambda function to check if a number is divisible by both 3 and 5\n",
+        "check_divisibility = lambda x: x % 3 == 0 and x % 5 == 0\n",
+        "\n",
+        "# Example usage\n",
+        "numbers = [15, 30, 10, 9, 20, 45, 25]\n",
+        "\n",
+        "# Using list comprehension to filter numbers divisible by both 3 and 5\n",
+        "divisible_by_3_and_5 = [num for num in numbers if check_divisibility(num)]\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(divisible_by_3_and_5)\n"
       ]
     },
     {
