--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3515,14 +3515,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
       "metadata": {
-        "id": "0aac8430-5d77-439d-9a99-9598fadf989c"
+        "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f34bffc0-265f-41dc-8e0b-f25bbfeae73d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map()."
+        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
+        "# Given list of numbers\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "# Using map() with a lambda function to multiply each number by 2\n",
+        "multiplied_numbers = list(map(lambda x: x * 2, numbers))\n",
+        "\n",
+        "# Print the resulting list\n",
+        "print(multiplied_numbers)\n"
       ]
     },
     {
