--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3535,26 +3535,43 @@
       ],
       "source": [
         "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
-        "# Given list of numbers\n",
         "numbers = [1, 2, 3, 4, 5]\n",
         "\n",
-        "# Using map() with a lambda function to multiply each number by 2\n",
         "multiplied_numbers = list(map(lambda x: x * 2, numbers))\n",
         "\n",
-        "# Print the resulting list\n",
         "print(multiplied_numbers)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
       "metadata": {
-        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22"
+        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2229a779-c7eb-4f0b-af9c-57924df0b09a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 4, 5, 6]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "\n",
+        "numbers = [1, 2, 3, 4, 2, 5, 2, 6]\n",
+        "\n",
+        "element_to_remove = 2\n",
+        "\n",
+        "filtered_numbers = [num for num in numbers if num != element_to_remove]\n",
+        "\n",
+        "print(filtered_numbers)\n"
       ]
     },
     {
