--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -3309,12 +3309,10 @@
       "source": [
         "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n",
         "def fibonacci(n):\n",
-        "    # Using list comprehension to generate the first n Fibonacci numbers\n",
-        "    fib = [0, 1] + [0] * (n - 2)  # Initializing the first two Fibonacci numbers\n",
-        "    [fib.__setitem__(i, fib[i-1] + fib[i-2]) for i in range(2, n)]  # Filling the list with Fibonacci numbers\n",
-        "    return fib[:n]  # Return only the first n numbers\n",
+        "    fib = [0, 1] + [0] * (n - 2)\n",
+        "    [fib.__setitem__(i, fib[i-1] + fib[i-2]) for i in range(2, n)]\n",
+        "    return fib[:n]\n",
         "\n",
-        "# Example usage\n",
         "n = 10\n",
         "result = fibonacci(n)\n",
         "print(f\"The first {n} Fibonacci numbers are: {result}\")\n"
@@ -3342,13 +3340,10 @@
       ],
       "source": [
         "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension.\n",
-        "# Define the range of numbers (1 to 10 in this example)\n",
         "n = 10\n",
         "\n",
-        "# Using dictionary comprehension to create the dictionary\n",
         "squares_dict = {x: x**2 for x in range(1, n+1)}\n",
         "\n",
-        "# Print the resulting dictionary\n",
         "print(squares_dict)\n"
       ]
     },
